[package]
name = "apify-client"
version = "0.1.0"
authors = ["metalwarrior665 <lukaskrivka@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.110", features = ["derive"] }
tokio = { version = "^0.2", features = ["full"] }
query_params = "0.1.0"
serde_json = "1.0.55"

[dev-dependencies]
tokio-test = "*"