[package]
name = "apify-client"
version = "0.2.0"
authors = ["metalwarrior665 <lukaskrivka@gmail.com>"]
edition = "2018"
description = "Typed wrapper for Apify API"
homepage = "https://github.com/metalwarrior665/apify-client-rs"
repository = "https://github.com/metalwarrior665/apify-client-rs"
keywords = ["apify", "web-scraping", "web-automation"]
categories = ["api-bindings"]
# Contains API token for local tests
exclude = ["test"]
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "1.0.110", features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
query_params = "^0.1"
serde_json = "1.0.55"
anyhow = "^1"
regex = "^1"

[dev-dependencies]
tokio-test = "^0.4"